--- a/.github/workflows/devskim.yml
+++ b/.github/workflows/devskim.yml
@@ -7,9 +7,26 @@ name: DevSkim
 
 on:
   push:
-    branches: ["main"]
+    paths-ignore:
+      - "*"
+      - "*/**"
+      - "!electron-app/icons/**"
+      - "!electron-app/icons"
+      - "!electron-app/**"
+      - "!electron-app"
+      - "**/CHANGELOG.md"
+      - "CHANGELOG.md"
   pull_request:
-    branches: ["main"]
+    paths-ignore:
+      - "*"
+      - "*/**"
+      - "!electron-app/icons/**"
+      - "!electron-app/icons"
+      - "!electron-app/**"
+      - "!electron-app"
+      - "**/CHANGELOG.md"
+      - "CHANGELOG.md"
+  workflow_dispatch:
   schedule:
     - cron: "37 1 * * 2"
 
