--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -64,6 +64,9 @@ jobs:
             - name: Run Prettier (fix)
               run: npx prettier --log-level debug --write "**/*.{js,md,css,html}"
 
+            - name: Stage all changes
+              run: git add -A
+
             - name: Commit & create pull request
               uses: peter-evans/create-pull-request@271a8d0340265f705b14b6d32b9829c1cb33d45e # v7.0.8
               with:
