--- a/.github/workflows/summary.yml
+++ b/.github/workflows/summary.yml
@@ -32,6 +32,7 @@ jobs:
 
             - name: Run AI inference
               id: inference
+              if: github.event.pull_request.head.repo.full_name == github.repository
               uses: actions/ai-inference@d645f067d89ee1d5d736a5990e327e504d1c5a4a # v1.1.0
               with:
                   prompt: |
