--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -133,6 +133,9 @@
         }
     ],
     "type": "commonjs",
+    "overrides": {
+        "jsonc-eslint-parser": "$jsonc-eslint-parser"
+    },
     "exports": {
         ".": "./main.js",
         "./package.json": "./package.json",
@@ -260,11 +263,11 @@
         "update-changelog": "powershell -ExecutionPolicy Bypass -File .\\Update-ChangeLogs.ps1",
         "update-changelog:all": "powershell -ExecutionPolicy Bypass -File .\\Update-ChangeLogs.ps1",
         "update-changelog:latest": "powershell -ExecutionPolicy Bypass -File .\\Update-ChangeLogs.ps1",
-        "updateDeps": "npx ncu -i --install never && npm install --force && cd ../docusaurus && npx ncu -i --install never && npm install --force && cd ../electron-app"
+        "update-deps": "npx ncu -i --install never && npm install --force && cd ../docusaurus && npx ncu -i --install never && npm install --force && cd ../electron-app"
     },
     "config": {},
     "dependencies": {
-        "@garmin/fitsdk": "^21.188.0",
+        "@garmin/fitsdk": "^21.194.0",
         "@maplibre/maplibre-gl-leaflet": "^0.1.3",
         "@vitest/ui": "^4.0.18",
         "arquero": "^8.0.3",
@@ -277,7 +280,7 @@
         "dompurify": "^3.3.1",
         "electron-conf": "^1.3.0",
         "electron-log": "^5.4.3",
-        "electron-updater": "^6.7.3",
+        "electron-updater": "^6.8.3",
         "hammerjs": "^2.0.8",
         "jquery": "^4.0.0",
         "jszip": "^3.10.1",
@@ -286,15 +289,15 @@
         "leaflet-measure": "^3.1.0",
         "leaflet-minimap": "^3.6.1",
         "leaflet.fullscreen": "^5.3.0",
-        "leaflet.locatecontrol": "^0.87.0",
+        "leaflet.locatecontrol": "^0.88.0",
         "leaflet.markercluster": "^1.5.3",
-        "maplibre-gl": "^5.17.0",
+        "maplibre-gl": "^5.18.0",
         "screenfull": "^6.0.2",
         "zod": "^4.3.6"
     },
     "devDependencies": {
         "@actions/artifact": "^6.1.0",
-        "@actions/attest": "^2.2.1",
+        "@actions/attest": "^3.0.0",
         "@actions/cache": "^6.0.0",
         "@actions/core": "^3.0.0",
         "@actions/exec": "^3.0.0",
@@ -306,11 +309,11 @@
         "@awmottaz/prettier-plugin-void-html": "^2.0.0",
         "@docusaurus/eslint-plugin": "^3.9.2",
         "@eslint/css": "^0.14.1",
-        "@eslint/js": "^9.39.2",
-        "@eslint/json": "^1.0.0",
+        "@eslint/js": "^10.0.1",
+        "@eslint/json": "^1.0.1",
         "@eslint/markdown": "^7.5.1",
-        "@html-eslint/eslint-plugin": "^0.54.2",
-        "@html-eslint/parser": "^0.54.0",
+        "@html-eslint/eslint-plugin": "^0.56.0",
+        "@html-eslint/parser": "^0.56.0",
         "@kurkle/color": "^0.4.0",
         "@microsoft/eslint-formatter-sarif": "^3.1.0",
         "@prettier/plugin-xml": "^3.4.2",
@@ -329,36 +332,37 @@
         "@types/leaflet-draw": "~1.0.13",
         "@types/leaflet.markercluster": "~1.5.6",
         "@types/mocha": "^10.0.10",
-        "@typescript-eslint/eslint-plugin": "^8.54.0",
-        "@typescript-eslint/parser": "^8.54.0",
+        "@typescript-eslint/eslint-plugin": "^8.56.0",
+        "@typescript-eslint/parser": "^8.56.0",
         "@vitest/coverage-v8": "^4.0.18",
-        "@vitest/eslint-plugin": "^1.6.6",
-        "baseline-browser-mapping": "^2.9.19",
+        "@vitest/eslint-plugin": "^1.6.9",
+        "baseline-browser-mapping": "^2.10.0",
         "color": "^5.0.3",
         "cross-env": "^10.1.0",
-        "electron": "^40.2.1",
-        "electron-builder": "^26.7.0",
-        "electron-builder-squirrel-windows": "^26.7.0",
-        "eslint": "^9.39.2",
-        "eslint-config-flat-gitignore": "^2.1.0",
+        "electron": "^40.6.0",
+        "electron-builder": "^26.8.1",
+        "electron-builder-squirrel-windows": "^26.8.1",
+        "eslint": "^10.0.1",
+        "eslint-config-flat-gitignore": "^2.2.1",
         "eslint-config-prettier": "^10.1.8",
         "eslint-import-resolver-typescript": "^4.4.4",
         "eslint-mdx": "^3.6.2",
-        "eslint-plugin-compat": "^6.1.0",
+        "eslint-plugin-canonical": "^5.1.3",
+        "eslint-plugin-compat": "^6.2.0",
         "eslint-plugin-depend": "^1.4.0",
         "eslint-plugin-import-x": "^4.16.1",
-        "eslint-plugin-jsdoc": "^62.5.4",
-        "eslint-plugin-json-schema-validator": "^6.0.3",
-        "eslint-plugin-jsonc": "^2.21.0",
+        "eslint-plugin-jsdoc": "^62.7.0",
+        "eslint-plugin-json-schema-validator": "^6.2.0",
+        "eslint-plugin-jsonc": "^3.0.0",
         "eslint-plugin-jsx-a11y": "^6.10.2",
         "eslint-plugin-math": "^0.13.1",
         "eslint-plugin-mdx": "^3.6.2",
-        "eslint-plugin-n": "^17.23.2",
-        "eslint-plugin-no-secrets": "^2.2.1",
-        "eslint-plugin-no-unsanitized": "^4.1.4",
-        "eslint-plugin-package-json": "^0.88.2",
-        "eslint-plugin-perfectionist": "^5.5.0",
-        "eslint-plugin-playwright": "^2.5.1",
+        "eslint-plugin-n": "^17.24.0",
+        "eslint-plugin-no-secrets": "^2.2.2",
+        "eslint-plugin-no-unsanitized": "^4.1.5",
+        "eslint-plugin-package-json": "^0.89.1",
+        "eslint-plugin-perfectionist": "^5.6.0",
+        "eslint-plugin-playwright": "^2.7.0",
         "eslint-plugin-prefer-arrow": "^1.2.3",
         "eslint-plugin-prettier": "^5.5.5",
         "eslint-plugin-promise": "^7.2.1",
@@ -367,23 +371,23 @@
         "eslint-plugin-react-perf": "^3.3.3",
         "eslint-plugin-redos": "^4.5.0",
         "eslint-plugin-regexp": "^3.0.0",
-        "eslint-plugin-security": "^3.0.1",
-        "eslint-plugin-sonarjs": "^3.0.6",
+        "eslint-plugin-security": "^4.0.0",
+        "eslint-plugin-sonarjs": "^4.0.0",
         "eslint-plugin-sort-class-members": "^1.21.0",
-        "eslint-plugin-storybook": "^10.2.7",
+        "eslint-plugin-storybook": "^10.2.10",
         "eslint-plugin-styled-components-a11y": "^2.2.1",
-        "eslint-plugin-testing-library": "^7.15.4",
-        "eslint-plugin-toml": "^1.0.4",
-        "eslint-plugin-unicorn": "^62.0.0",
-        "eslint-plugin-unused-imports": "^4.3.0",
+        "eslint-plugin-testing-library": "^7.16.0",
+        "eslint-plugin-toml": "^1.1.1",
+        "eslint-plugin-unicorn": "^63.0.0",
+        "eslint-plugin-unused-imports": "^4.4.1",
         "eslint-plugin-write-good-comments": "^0.2.0",
         "eslint-plugin-xss": "^0.1.12",
-        "eslint-plugin-yml": "^3.1.2",
+        "eslint-plugin-yml": "^3.2.1",
         "fast-check": "^4.5.3",
         "git-cliff": "^2.12.0",
         "globals": "^17.3.0",
-        "jsdom": "^28.0.0",
-        "jsonc-eslint-parser": "^2.4.2",
+        "jsdom": "^28.1.0",
+        "jsonc-eslint-parser": "^3.1.0",
         "makensis": "^3.0.3",
         "postcss": "^8.5.6",
         "postcss-value-parser": "^4.2.0",
@@ -394,8 +398,8 @@
         "prettier-plugin-interpolated-html-tags": "^2.0.1",
         "prettier-plugin-jsdoc": "^1.8.0",
         "prettier-plugin-jsdoc-type": "^0.2.0",
-        "prettier-plugin-merge": "^0.9.0",
-        "prettier-plugin-multiline-arrays": "^4.1.3",
+        "prettier-plugin-merge": "^0.9.1",
+        "prettier-plugin-multiline-arrays": "^4.1.4",
         "prettier-plugin-packagejson": "^3.0.0",
         "prettier-plugin-properties": "^0.3.1",
         "prettier-plugin-sh": "^0.18.0",
@@ -413,7 +417,7 @@
         "vitest": "^4.0.18",
         "yaml-eslint-parser": "^2.0.0"
     },
-    "packageManager": "npm@11.9.0",
+    "packageManager": "npm@11.10.1",
     "engines": {
         "node": ">=16.0.0",
         "npm": ">=7.0.0"
